src/service/snapshots/tests__remove_bucket-2.snap
---
created: "2019-08-04T19:32:25.136868Z"
creator: insta@0.10.0
source: src/service/symbolication.rs
expression: response
---
status: completed
stacktraces:
  - frames:
      - status: missing
        original_index: 0
        instruction_addr: 0x100000fa0
modules:
  - debug_status: missing
    arch: unknown
    type: macho
    code_id: 502fc0a51ec13e479998684fa139dca7
    debug_id: 502fc0a5-1ec1-3e47-9998-684fa139dca7
    image_addr: 0x100000000
    image_size: 4096
